--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prijeto 1</title>
+   <title>prijeto 1</title>
+   <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     
 </body>
 </html>
+<body>
+        <header class="cabecalho">
+        <img src="alurastart logo.png" alt="logo da alura start">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">estudante</li>
+        <li classe="cabecalho-lista-item">escola</li>
+        </ul>
+    </header>
+
+</body>
+</html>
+
+</header>
