--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         </ul>
     </header>
 
+<sectionc class="escola">
+<div class="escola-div-conteudo">
+<h2 class="escola-titulo">sobre a escola</h2>
+<p class="escola texto um">A programação como prática pedagógica para o desenvolvimento do pensamento computacional</p>
+</div>
+<img class="escola-imagem" src="formula-bro.pgn" alt=""
+</sectionc>
+
 </body>
 </html>
 
