--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </body>
 </html>
 <body>
-        <header class="cabecalho">
-        <img src="alurastart logo.png" alt="logo da alura start">
+        <header class="cabeçalho">
+    <img class="cabeçalho-inmagem" src="alurastart logo.png" alt="alurastart logo">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">estudante</li>
         <li classe="cabecalho-lista-item">escola</li>
@@ -26,7 +26,7 @@
 <h2 class="escola-titulo">sobre a escola</h2>
 <p class="escola texto um">A programação como prática pedagógica para o desenvolvimento do pensamento computacional</p>
 </div>
-<img class="escola-imagem" src="formula-bro.pgn" alt=""
+
 </sectionc>
 
 </body>
