--- a/index.html
+++ b/index.html
@@ -2,34 +2,22 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>prijeto 1</title>
-   <link rel="stylesheet" href="style.css">
-
+    <meta name="maicao" content="width=device-width, initial-scale=1.0">
+    <title>Paginas web</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-</body>
-</html>
-<body>
-        <header class="cabeçalho">
-    <img class="cabeçalho-inmagem" src="alurastart logo.png" alt="alurastart logo">
-        <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">estudante</li>
-        <li classe="cabecalho-lista-item">escola</li>
-        </ul>
-    </header>
-
-<sectionc class="escola">
-<div class="escola-div-conteudo">
-<h2 class="escola-titulo">sobre a escola</h2>
-<p class="escola texto um">A programação como prática pedagógica para o desenvolvimento do pensamento computacional</p>
-</div>
-
-</sectionc>
-
-</body>
-</html>
-
+    <header class="cabeçalho">
+  <img class="cabeçalho-imagem" src="logo aluraStart.png.png" alt="logo da alura Start">  
+  <ul class="cabeçalho-lista">
+    <li class="cabeçalho-lista-item">Escola</li>
+    <li class="cabeçalho-lista-item">Estudante</li>
+  </ul>
 </header>
+<section class="escola">
+    <div class="escola-div-conteudo">
+        <h2 class="escola-titulo">Sobre a Escola</h2>
+        <p class="escola-texto-um">A programação como prática pedagógica para o desenvolvimento do pensamento computacional.
+<img class="escola-imagem" src="professora hellena.png" alt="professora no quadro.">
+        </body>
+</html>
