--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,8 @@
     <header class="cabeçalho">
   <img class="cabeçalho-imagem" src="logo aluraStart.png.png" alt="logo da alura Start">  
   <ul class="cabeçalho-lista">
-    <li class="cabeçalho-lista-item">Escola</li>
+    <li class="cabeho-lista">
+      <li class="cabeçalho-lista-item">Escola</li>
     <li class="cabeçalho-lista-item">Estudante</li>
   </ul>
 </header>
@@ -20,4 +21,4 @@
         <p class="escola-texto-um">A programação como prática pedagógica para o desenvolvimento do pensamento computacional.
 <img class="escola-imagem" src="professora hellena.png" alt="professora no quadro.">
         </body>
-</html>
+</html
