--- a/index.html
+++ b/index.html
@@ -1,24 +1,81 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="maicao" content="width=device-width, initial-scale=1.0">
-    <title>Paginas web</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Equipe Alura Start</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="cabeçalho">
-  <img class="cabeçalho-imagem" src="logo aluraStart.png.png" alt="logo da alura Start">  
-  <ul class="cabeçalho-lista">
-    <li class="cabeho-lista">
-      <li class="cabeçalho-lista-item">Escola</li>
-    <li class="cabeçalho-lista-item">Estudante</li>
-  </ul>
-</header>
-<section class="escola">
-    <div class="escola-div-conteudo">
-        <h2 class="escola-titulo">Sobre a Escola</h2>
-        <p class="escola-texto-um">A programação como prática pedagógica para o desenvolvimento do pensamento computacional.
-<img class="escola-imagem" src="professora hellena.png" alt="professora no quadro.">
-        </body>
-</html
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
+        </ul>
+    </header>
+    <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
+            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+        </div>
+        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+    </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-todos">
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="chaves.jpg" alt="foto do chaves">
+            <a href="https://www.instagram.com/chavesmetaleiro_phil/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="kiko.jpg" alt="foto da kiko">
+            <h3 class="estudante-nome">kiko</h3>
+            <a href="https://www.instagram.com/carlos_kiko1/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="manoel gomes.jpg" alt="foto da manoel gomes">
+            <h3 class="estudante-nome">manoel gomes</h3>
+            <a href="https://www.instagram.com/manoelgomesbr/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <span></span>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="seu madruga.jpg" alt="foto da seu madruga">
+            <h3 class="estudante-nome">seu madruga</h3>
+            <a href="https://www.instagram.com/carmenvaldesjul/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="ramon.jpg" alt="foto da ramon">
+            <h3 class="estudante-nome">ramon</h3>
+            <a href="https://www.instagram.com/ramondinopro/?hl=pt-br"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="ronni.jpg" alt="foto da ronni">
+            <h3 class="estudante-nome">ronni</h3>
+         <a href="https://www.instagram.com/ronniecoleman8/?hl=pt"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a> 
+        <span></span>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="latrel.jpg" alt="foto da latrel">
+            <h3 class="estudante-nome">latrel</h3>
+            <a href="https://www.instagram.com/terrycrews/?hl=pt"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="bistecone.jpg" alt="foto da bistecone">
+            <h3 class="estudante-nome">bistecone</h3>
+            <a href="https://www.instagram.com/bistecone_/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+
+    </div>
+    </section>
+    <footer class="rodape">
+        <img class="rodape-imagem"src="alurastart logo.png" alt="logo da alura start">
+    </footer>
+</body>
+</html>
